// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkRadio should render correctly 1`] = `
<DocumentFragment>
  <label
    class="bpk-radio"
  >
    <input
      aria-invalid="false"
      aria-label="Direct"
      class="bpk-radio__input"
      name="radio"
      type="radio"
    />
    <div
      class="bpk-radio__circle"
    />
    <span
      aria-hidden="true"
    >
      Direct
    </span>
  </label>
</DocumentFragment>
`;

exports[`BpkRadio should render correctly when invalid 1`] = `
<DocumentFragment>
  <label
    class="bpk-radio bpk-radio--invalid"
  >
    <input
      aria-invalid="true"
      aria-label="Direct"
      class="bpk-radio__input"
      name="radio"
      type="radio"
      value="my-value"
    />
    <div
      class="bpk-radio__circle"
    />
    <span
      aria-hidden="true"
    >
      Direct
    </span>
  </label>
</DocumentFragment>
`;

exports[`BpkRadio should render correctly when label is a node 1`] = `
<DocumentFragment>
  <label
    class="bpk-radio"
  >
    <input
      aria-invalid="false"
      aria-label="[object Object]"
      class="bpk-radio__input"
      name="radio"
      type="radio"
    />
    <div
      class="bpk-radio__circle"
    />
    <span
      aria-hidden="true"
    >
      <span>
        Direct
      </span>
    </span>
  </label>
</DocumentFragment>
`;

exports[`BpkRadio should render correctly with ariaLabel attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-radio"
  >
    <input
      aria-invalid="false"
      aria-label="Is this direct"
      class="bpk-radio__input"
      id="radio"
      name="radio"
      type="radio"
    />
    <div
      class="bpk-radio__circle"
    />
    <span
      aria-hidden="true"
    >
      Direct
    </span>
  </label>
</DocumentFragment>
`;

exports[`BpkRadio should render correctly with checked attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-radio"
  >
    <input
      aria-invalid="false"
      aria-label="Direct"
      checked=""
      class="bpk-radio__input"
      name="radio"
      type="radio"
    />
    <div
      class="bpk-radio__circle"
    />
    <span
      aria-hidden="true"
    >
      Direct
    </span>
  </label>
</DocumentFragment>
`;

exports[`BpkRadio should render correctly with disabled attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-radio bpk-radio--disabled"
  >
    <input
      aria-invalid="false"
      aria-label="Direct"
      class="bpk-radio__input"
      disabled=""
      name="radio"
      type="radio"
    />
    <div
      class="bpk-radio__circle"
    />
    <span
      aria-hidden="true"
    >
      Direct
    </span>
  </label>
</DocumentFragment>
`;

exports[`BpkRadio should render correctly with id attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-radio"
  >
    <input
      aria-invalid="false"
      aria-label="Direct"
      class="bpk-radio__input"
      id="radio"
      name="radio"
      type="radio"
    />
    <div
      class="bpk-radio__circle"
    />
    <span
      aria-hidden="true"
    >
      Direct
    </span>
  </label>
</DocumentFragment>
`;

exports[`BpkRadio should render correctly with value attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-radio"
  >
    <input
      aria-invalid="false"
      aria-label="Direct"
      class="bpk-radio__input"
      name="radio"
      type="radio"
      value="my-value"
    />
    <div
      class="bpk-radio__circle"
    />
    <span
      aria-hidden="true"
    >
      Direct
    </span>
  </label>
</DocumentFragment>
`;

exports[`BpkRadio should render correctly with white attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-radio bpk-radio--white"
  >
    <input
      aria-invalid="false"
      aria-label="Direct"
      class="bpk-radio__input"
      name="radio"
      type="radio"
    />
    <div
      class="bpk-radio__circle"
    />
    <span
      aria-hidden="true"
    >
      Direct
    </span>
  </label>
</DocumentFragment>
`;
